improvements but also broken layout. Need to fix next

--- a/public/app/styles/scss/_colors.scss
+++ b/public/app/styles/scss/_colors.scss
@@ -13,7 +13,18 @@ $background_50: rgba(9,9,9, 0.5);
 $foreground: rgb(240,240,240);
 $foreground_10: rgba(240,240,240, 0.1);
 $foreground_20: rgba(240,240,240, 0.2);
+$foreground_30: rgba(240,240,240, 0.3);
+$foreground_40: rgba(240,240,240, 0.4);
 $foreground_50: rgba(240,240,240, 0.5);
 $foreground_75: rgba(240,240,240, 0.75);
 $foreground_80: rgba(240,240,240, 0.8);
 $foreground_90: rgba(240,240,240, 0.9);
+
+$white: rgb(252,252,252);
+$white_10: rgba($white, 0.1);
+$white_20: rgba($white, 0.2);
+$white_30: rgba($white, 0.3);
+$white_40: rgba($white, 0.4);
+$white_50: rgba($white, 0.5);
+$white_60: rgba($white, 0.6);
+$white_70: rgba($white, 0.7);
