--- a/public/app/styles/scss/main.scss
+++ b/public/app/styles/scss/main.scss
@@ -4,9 +4,12 @@
  */
 @import 'colors';
 
-body {
+$max-width: 1114px;
+
+html, body {
   font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: $foreground;
+  // background-color: $background;
   overflow: hidden;
 }
 
@@ -39,6 +42,7 @@ body {
 main {
   position: relative;
   max-height: 100vh;
+  max-width: $max-width;
 }
 
 ::selection {
